improve editor, connect editor with an interpreter