@@ -1,16 +1,8 @@
 package org.example.editor;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 public class KeywordStyles {
 
-    public static final Map<String, String> KEYWORD_STYLES = Collections.unmodifiableMap(new HashMap<String, String>() {{
-        put("var", "keyword-var");
-        put("map", "keyword-func");
-        put("reduce", "keyword-func");
-        put("print", "keyword-command");
-        put("out", "keyword-command");
-    }});
+    public static final Map<String, String> KEYWORD_STYLES = Map.of("var", "keyword-var", "map", "keyword-func", "reduce", "keyword-func", "print", "keyword-command", "out", "keyword-command");
 }
